fixed the issue with the non pop up sumary not showing

--- a/solution-hw2/styles.css
+++ b/solution-hw2/styles.css
@@ -170,6 +170,10 @@ html, body {
     padding-inline: 20px;
 }
 
+.cart-summary{
+  font-size: 12px;
+}
+
   
   /* This styles the add to cart container label*/
   .cart-button-container label{
